--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,34 @@
 html {
+  min-height: 100vh;
+  background-color: #2c2c2c;
+}
+
+.OneElementFading {
   background-color: #c72c41;
+  border-radius: 4px;
+  padding: 10px;
+  height: 30vh;
+}
+
+.MultipleElementsFading {
+  margin-top: 30px;
+  background-color: #2cc793;
+  border-radius: 4px;
+  padding: 10px;
+  height: 550px;
+}
+
+.StaggeredAnimation {
+  margin-top: 30px;
+  background-color: #2c41c7;
+  border-radius: 4px;
+  padding: 10px;
+  height: 550px;
+}
+
+h2 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
 }
 
 .App {
